# riffpga

./: .gitignore  CMakeLists.txt  README.md  buildit.sh
boards/: riffpga.h
firmware/: README.md  riffpga_chipdiscover.uf2  riffpga_generic.uf2
src/: bitstream.c  bitstream.h  board.c  board.h  board_config.c  board_config.h  board_config_defaults.h  board_defs.h  board_includes.h  cdc_interface.c  cdc_interface.h  clock_pwm.c  clock_pwm.h  debug.h  driver_state.h  fpga.c  fpga.h  ghostfat.c  io_inputs.c  io_inputs.h  main.c  msc_disk.c  tusb_config.h  uart_bridge.c  uart_bridge.h  uf2.h  usb_descriptors.c
src/config_defaults/: chipdiscover.h  efab_explain.h  generic.h  psydmi.h  sys_version.h
src/sui/: sui_command.c  sui_command.h  sui_handler.c  sui_handler.h  sui_util.c  sui_util.h
src/sui/commands/: clocking.c  clocking.h  config.c  config.h  dump.c  dump.h  fpga.c  fpga.h  io.c  io.h  rp_system.c  rp_system.h  uart.c  uart.h
